@@ -7,6 +7,11 @@ Corrections:
 	In some situations xioclose() was called nested what could cause hanging
 	of OpenSSL in pthread_rwlock_wrlock()
 
+	socat 1.8.0.0 with addresses of type RECVFROM and option fork, where
+	the second address failed to connect/open in the child process, entered
+	a fork loop that was only stopped by FD exhaustion caused by FD leak.
+	Test: RECVFROM_FORK_LOOP
+
 Features:
 	Total inactivity timeout option -T 0 now means 0.0 seconds; up to
 	version 1.8.0.0 it meant no total inactivity timeout.
